Fixed alignment on burger menu. Updated function to close it when user clicks on a link

--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -4,13 +4,13 @@
     width: 36px;
     height: 30px;
     left: 36px;
-    top: 36px;
+    top: 20px;
   }
   
   /* Color/shape of burger icon bars */
   .bm-burger-bars {
-    background: #ffffff;
-    opacity: 80%;
+    background: #000;
+    opacity: 100%;
   }
   
   /* Color/shape of burger icon bars on hover*/
@@ -19,14 +19,14 @@
   }
   
   /* Position and sizing of clickable cross button */
-  .bm-cross-button {
-    height: 24px;
-    width: 24px;
-  }
+  /* .bm-cross-button {
+    height: 5rem;
+    width: 5rem;
+  } */
   
   /* Color/shape of close button cross */
   .bm-cross {
-    background: #bdc3c7;
+    background: #000;
   }
   
   /*
@@ -41,8 +41,8 @@
   
   /* General sidebar styles */
   .bm-menu {
-    background: #312E81;
-    padding: 2.5em 1.5em 0;
+    background-color: rgb(226 232 240);
+    padding: 1.5rem 1rem 0;
     font-size: 1.15em;
   }
   
@@ -53,21 +53,22 @@
   
   /* Wrapper for item list */
   .bm-item-list {
-    color: #b8b7ad;
+    color: #000;
     padding: 0.8em;
   }
   
   /* Individual item */
   .bm-item {
     display: inline-block;
-    color: #d1d1d1;
-    margin-bottom: 10px;
+    color: #000;
+    font-weight: bold;
+    /* margin-bottom: 10px; */
     text-align: left;
     text-decoration: none;
     transition: color 0.2s;
   }
   .bm-item:hover {
-    color: #ffffff;
+    color: #000;
   }
   
   /* Styling of overlay */
